--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "lint:fix": "eslint ./ --fix --ext .js,.jsx"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "clsx": "^1.1.1",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "msw": "^0.38.1",
