--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint ./ --fix --ext .js,.jsx"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "bootstrap": "^5.1.3",
@@ -23,6 +24,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.29.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "uuid": "^8.3.2",
