--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-country-region-selector": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-phone-input-2": "^2.15.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select-country-list": "^2.2.3",
     "uuid": "^8.3.2",
     "whatwg-fetch": "^3.6.2",
     "yup": "^0.32.11"
